formatting fixes, links on small swatches

--- a/src/style.css
+++ b/src/style.css
@@ -73,18 +73,18 @@ body {
 }
 
 .swatchLargeContainer {
-  width: 600px;
-  height: 375px;
+  width: 780px;
+  height: 475px;
+  margin-bottom: 20px;
   border: 1px solid #666666;
   border-radius: 6px;
 }
 
 .swatchLarge {
-  width: 600px;
-  height: 300px;
+  width: 780px;
+  height: 400px;
   border-top-right-radius: 6px;
   border-top-left-radius: 6px;
-  background-color: #381947;
 }
 
 .swatchLargeLabel {
@@ -97,19 +97,18 @@ body {
 
 
 .swatchSmallContainer {
-  width: 100px;
-  height: 100px;
+  width: 140px;
+  height: 105px;
   border: 1px solid white;
   border-radius: 6px;
   box-shadow: 0 0 2px 1px #cccccc;
 }
 
 .swatchSmall {
-  width: 100px;
-  height: 65px;
+  width: 140px;
+  height: 70px;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  background-color: #381947;
 }
 
 .swatchSmallLabel {
@@ -120,7 +119,8 @@ body {
 .swatchSmallGrid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-column-gap: 10px;
+  grid-column-gap: 18px;
+  grid-row-gap: 10px;
 }
 
 button {
